# mpl-agent

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.claude/: nanoclawproto.md
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml  create-release.yml  deploy-program.yml  main.yml  publish-js-client.yml  publish-rust-client.yml  test-js-client.yml  test-rust-client.yml
clients/js/: .eslintrc.js  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/migrator/: .npmrc  package.json  pnpm-lock.yaml  tsconfig.json
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust-identity/: Cargo.toml
clients/rust-reputation/: Cargo.toml
clients/rust-tools/: Cargo.toml  README.md
clients/rust-tools/src/: lib.rs
clients/rust-tools/tests/: delegate_execution.rs  register.rs  register_x402.rs  revoke_execution.rs
clients/rust-validation/: Cargo.toml
configs/: kinobi-identity.cjs  kinobi-reputation.cjs  kinobi-tools.cjs  kinobi-validation.cjs  kinobi.cjs  shank.cjs  validator.cjs
docs/: agent-registration-guide.md
docs/plans/: 2026-03-13-bubblegum-migration-design.md  2026-03-13-bubblegum-migration-impl.md  2026-03-13-mint-test-impl.md
idls/: mpl_8004_identity.json  mpl_agent_identity.json  mpl_agent_reputation.json  mpl_agent_tools.json  mpl_agent_validation.json  mpl_project_name.json
patches/: @metaplex-foundation__kinobi@1.0.0-alpha.2.patch
programs/mpl-8004-identity/: Cargo.toml  README.md
programs/mpl-8004-identity/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
programs/mpl-8004-identity/src/processor/: create.rs  mod.rs  register.rs
programs/mpl-8004-identity/src/state/: agent_identity.rs  collection_config.rs  mod.rs  my_account.rs  my_data.rs  my_pda_account.rs
programs/mpl-agent-identity/: Cargo.toml  README.md
programs/mpl-agent-identity/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
programs/mpl-agent-identity/src/processor/: mod.rs  register.rs  register_identity_v1.rs  set_agent_token_v1.rs
programs/mpl-agent-identity/src/state/: agent_identity.rs  agent_identity_v1.rs  agent_identity_v2.rs  collection_identity_config.rs  mod.rs
programs/mpl-agent-reputation/: Cargo.toml  README.md
programs/mpl-agent-tools/: Cargo.toml  (+1 more)
programs/mpl-agent-validation/: Cargo.toml  README.md
programs/mpl-agent-validation/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
programs/mpl-agent-validation/src/processor/: mod.rs  register.rs
programs/mpl-agent-validation/src/state/: agent_validation.rs  collection_validation_config.rs  mod.rs
(+105 files in other folders)
