[package]
name = "mpl-agent-tools"
description = "A new Solana program using the Metaplex Project Template"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"
repository = "https://github.com/metaplex-foundation/mpl-agent"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "^1.5"
num-derive = "^0.4"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.14", optional = true }
solana-program = "3.0.0"
solana-program-error = "3.0.0"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "3.0.0"
solana-sdk = "3.0.0"
mpl-core = "0.12.0"
mpl-agent-identity = { path = "../rust-identity" }
