[package]
name = "mpl-agent-identity-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.23", features = ["derive", "min_const_generics"] }
podded = "0.5.4"
shank = "0.4.8"
num-derive = "^0.4"
num-traits = "^0.2"
solana-program = "^2.3"
thiserror = "^2.0"
mpl-utils = "0.4.1"
mpl-core = {path = "/Users/kelliott/Metaplex/security/core/clients/rust/"}

# Pin crates below versions that require edition2024 (unsupported by cargo build-sbf's bundled Cargo 1.84)
rmp = ">=0.8,<0.8.15"
rmp-serde = ">=1.3,<1.3.1"