[package]
name = "mpl-agent-validation-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.23", features = ["derive", "min_const_generics"] }
podded = "0.7.0"
shank = "0.4.8"
num-derive = "^0.4"
num-traits = "^0.2"
solana-program = "3.0.0"
solana-system-interface = "2.0"
thiserror = "^2.0"
mpl-utils = { version = "0.5.0", default-features = false }
mpl-core = "0.12.0"
